--- a/Reproductor/app/build.gradle
+++ b/Reproductor/app/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     apply plugin: 'kotlin-android-extensions'
+    apply plugin: 'kotlin-android-extensions'
 }
 
